--- a/djmbests.css
+++ b/djmbests.css
@@ -4,12 +4,13 @@
     box-sizing: border-box;
 }
 .container{
-    background: url(womantie.jpg) no-repeat center center;
+    background: url('womantie.jpg'), url('womantie.jpg'), url('womantie.jpg') ;
     width: 1500px;
     height: 900vh;
     background-size: contain;
     position: relative;
 }
+
 .container::after{
     content: '' ;
     position: absolute;
@@ -18,14 +19,14 @@
    /* background: rgba(0,0,0.4);*/
 }
 h1{
-    position: absolute;
-    top: 50;
-    left: 50;
-    transform: translate(-50%,-50%);
+    margin-top: 240px;
+    text-align: center;
     color: white;
     font-size: 50px;
     z-index: 2;
+    text-shadow: 2px 2px 0px rgba(255, 255, 255,.7), 5px 7px 7px 0px rgba(0, 0, 0, 0.1);
 }
+/*
 @keyframes snowfall {
     0%{
         opacity: 0;
@@ -53,4 +54,4 @@ h1{
         opacity: 0;
         top: 100vh;
     }
-}
+} */
